# kwin

./: .gitignore  CMakeLists.txt  plasma-kwin_wayland.service.in
autotests/drm/: drmTest.cpp
autotests/integration/: CMakeLists.txt  fakeinput_test.cpp  input_capture_test.cpp  kwin_wayland_test.cpp  kwin_wayland_test.h  move_resize_window_test.cpp  test_helpers.cpp  xdgshellwindow_test.cpp
autotests/libinput/: input_event_test.cpp  pointer_event_test.cpp
cmake/modules/: Findlibhybris.cmake
debian/: changelog  control  debhelper-build-stamp  kwin-common.install  kwin-common.postinst.debhelper  kwin-common.substvars  kwin-data.postinst.debhelper  kwin-data.prerm.debhelper  kwin-data.substvars  kwin-wayland.postinst  kwin-wayland.substvars  kwin-x11.substvars  libkwineffects14.substvars  libkwinglutils14.substvars
src/: CMakeLists.txt  compositor_wayland.cpp  config-kwin.h.cmake  input.cpp  input.h  input_event.cpp  input_event.h  layershellv1window.cpp  main.cpp  main.h  main_wayland.cpp  main_x11.cpp  outputconfigurationstore.cpp  outputconfigurationstore.h  pointer_input.cpp  pointer_input.h  tablet_input.cpp  tablet_input.h  wayland_server.cpp  waylandwindow.cpp  window.cpp  window.h  workspace.cpp  workspace.h  x11window.cpp  xdgshellwindow.cpp  xkb.cpp  xkb.h
src/backends/: CMakeLists.txt
src/backends/hwcomposer/: CMakeLists.txt  hwcomposer_backend.cpp  hwcomposer_backend.h  hwcomposer_egl_backend.cpp  hwcomposer_egl_backend.h
src/core/: colorspace.cpp  colorspace.h  iccprofile.cpp  inputdevice.h  output.cpp  output.h  (+9 more)
tests/: renderingservertest.cpp
(+94 files in other folders)
